exercise-17/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 5000
  selector:
    app: myapp
